Fix edit mode detection in save password settings view

The view controller currently uses self.editing, which seems not working.
Querying [self.editor isEditing] works better.

BUG=739425
R=lpromero@chromium.org

Change-Id: Ie785bf49dab9eff03e43982ffefbec52bb33e2ae
Reviewed-on: https://chromium-review.googlesource.com/559682
Reviewed-by: Louis Romero <lpromero@chromium.org>
Commit-Queue: Vaclav Brozek <vabr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484476}
Former-commit-id: b4d8ef261ff7621c5b74a8331fc4b07e4ce23653